<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
        <FrameLayout
            android:id="@+id/activity_main_frame"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:gravity="center"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:minHeight="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"

                    android:elevation="4dp"
                    android:transitionName="actionBar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/list_background"
                    android:layout_below="@id/toolbar"
                    android:orientation="horizontal">

                    <fragment
                        class="org.kore.kolabnotes.android.fragment.OverviewFragment"
                        android:id="@+id/overview_fragment"
                        android:layout_weight="1"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    <!-- The navigation drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/primary_text"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_view"/>
</androidx.drawerlayout.widget.DrawerLayout>