...
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coordinator_overview">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
...
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_notes" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button"
                android:transitionName="fab"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="-28dp"
...
